style fixes for latest card size for text truncation.

--- a/src/app/latest-preview/latest-preview.component.css
+++ b/src/app/latest-preview/latest-preview.component.css
@@ -18,7 +18,7 @@
 }
 
 .imagePreview img {
-  height: 317px;
+  height: 327px;
   width: 250px;
   object-fit: cover;
 }
